Fixed css issue where modal was canceling scrollbar

--- a/css/islandModal.css
+++ b/css/islandModal.css
@@ -1,3 +1,8 @@
+.modal-open{
+    /* Prevents the modal from blocking the scroll functionality */
+    height: auto;
+}
+
 .modal-content {
     display: flex;
     height: 100%;
